--- a/src/sass/2-layouts/_contact.sass
+++ b/src/sass/2-layouts/_contact.sass
@@ -26,7 +26,7 @@
             -moz-transition: all 0.2s ease-out
             transition: all 0.2s ease-out
             vertical-align: bottom
-            border: solid 1px $cor-branca
+            border: 1px solid $cor-branca
 
             i
                 vertical-align: bottom
